Fixed alignment issue in small screens

--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -29,3 +29,9 @@
 .skill-icon:hover {
   transform: scale(1.1, 1.1);
 }
+
+@media screen and (max-width: 500px) {
+  .skills-container {
+    justify-content: center;
+  }
+}
